structure set up, general info for home and coding projects

--- a/react/index.html
+++ b/react/index.html
@@ -16,6 +16,7 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> -->
 <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <!--local CSS dependencies-->
   <link rel="stylesheet" href="/stylesheets/style.css" />
