buttons added to home, interests done

--- a/react/index.html
+++ b/react/index.html
@@ -17,6 +17,7 @@
 <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
   <!--local CSS dependencies-->
   <link rel="stylesheet" href="/stylesheets/style.css" />
