finialized projects, work experience, etc.

--- a/react/index.html
+++ b/react/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Skeleton</title>
-  <!-- insert logo? -->
+  <title>Gabi Klapman Personal Website</title>
+
+
+
 
 
 
@@ -21,6 +23,8 @@
 
   <!--local CSS dependencies-->
   <link rel="stylesheet" href="/stylesheets/style.css" />
+
+  <link rel="icon" href="/favicon.ico" />
 
   <!--external JS dependencies-->
   <!-- <script src="/bootstrap/dist/js/bootstrap.min.js"></script> -->
